# craic

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTOR_AGREEMENT.md  Makefile  README.md  SECURITY.md  docker-compose.yml
.claude-plugin/: marketplace.json  plugin.json
.claude/rules/: python.md
.github/workflows/: ci.yml
commands/: craic-reflect.md  craic-status.md
docs/: CRAIC-Proposal.md  architecture.md  governance-and-compliance.md
hooks/: hooks.json
plugins/craic/.claude-plugin/: plugin.json
plugins/craic/commands/: craic-reflect.md  craic-status.md
plugins/craic/hooks/: hooks.json
plugins/craic/server/: pyproject.toml
plugins/craic/server/craic_mcp/: knowledge_unit.py  local_store.py  scoring.py  server.py  team_client.py
plugins/craic/server/tests/: test_knowledge_unit.py  test_local_store.py  test_server.py  test_team_client.py
plugins/craic/skills/craic/: SKILL.md
scripts/: install-opencode.sh  seed-users.py
scripts/seed/: load.py
seed/: knowledge_units.json  load.py
server/: pyproject.toml
server/craic_mcp/: knowledge_unit.py  scoring.py  server.py
server/tests/: test_knowledge_unit.py  test_local_store.py  test_server.py
skills/craic/: SKILL.md
team-api/: Dockerfile  pyproject.toml
team-api/team_api/: app.py  auth.py  deps.py  review.py  scoring.py  store.py  tables.py
team-api/tests/: test_app.py  test_auth.py  test_review.py  test_store.py
team-ui/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
team-ui/src/: App.tsx  api.ts  auth.tsx  types.ts  utils.ts
team-ui/src/components/: ConfidenceBadge.tsx  DomainTags.tsx  DragIndicators.tsx  KnowledgeUnitModal.tsx  Layout.tsx  ProtectedRoute.tsx  ReviewActions.tsx  ReviewCard.tsx  StatusBadge.tsx
team-ui/src/hooks/: useCardDrag.ts
team-ui/src/pages/: DashboardPage.tsx  LoginPage.tsx  ReviewPage.tsx
