[project]
name = "craic-mcp-server"
version = "0.1.0"
description = "CRAIC MCP server for shared agent learning"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "pydantic>=2.0",
    "nanoid",
    "httpx",
]

[project.scripts]
craic-mcp-server = "craic_mcp.server:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["craic_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
