[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "craic-mcp-server"
version = "0.3.2"
description = "CRAIC MCP server — shared agent knowledge commons"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.25",
    "pydantic>=2.0",
    "httpx",
]

[project.scripts]
craic-mcp-server = "craic_mcp.server:main"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "tests" },
]

lint = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.4",
]

tests = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["craic_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
